--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Die-Baumwollpflucker-b-Als-Fortsetzungsroman-im-Vorwarts-1925_75795
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75795-h/images/cover.jpg
 creator:
   author:
     agent_name: Traven, B.
@@ -17,6 +20,8 @@ creator:
     - https://en.wikipedia.org/wiki/B._Traven
     - https://de.wikipedia.org/wiki/B._Traven
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75795#Die-Baumwollpflucker-b-Als-Fortsetzungsroman-im-Vorwarts-1925
 gutenberg_issued: '2025-04-05'
 gutenberg_type: Text
 identifiers:
